# libgkit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-test.yml  linux-build-test.yml  linux-debug-build-test.yml  windows-debug-build-test.yml
binding/rust/: Cargo.toml
binding/rust/src/: build.rs  lib.rs
binding/rust/src/application/: application.rs
binding/rust/src/graphic/: window.rs
cmake/: common.cmake
include/gkit/: gkit.hpp
include/gkit/c_abi/: application.h  window.h
include/gkit/core/: application.hpp  gkit.hpp  processer.hpp
include/gkit/core/input/: action.hpp  mouse.hpp
include/gkit/core/resource/: resource_loader.hpp  texture.hpp
include/gkit/core/scene/: object.hpp  unit.hpp
include/gkit/resource/: metadata.hpp
include/gkit/scene/2d/: object2d.hpp
src/: CMakeLists.txt
src/c_abi/: CMakeLists.txt
src/c_abi/application/: application.cpp
src/c_abi/graphic/: windows.cpp
src/c_abi/include/: application.h  window.h
src/core/: CMakeLists.txt  application.cpp
src/core/application/: application.cpp
src/core/graphic/: window.cpp
src/core/include/: application.hpp  gkit.hpp  input.hpp  window.hpp
src/core/include/graphic/: window.hpp
src/core/include/input/: input.hpp  keydef.hpp
src/core/include/resource/: resource_loader.hpp  texture.hpp
src/core/include/scene/: unit.hpp
src/core/include/utils/: Singleton.hpp
src/core/input/: action.cpp  cache.hpp  input.cpp
src/core/resource/: resource.cpp  resource_loader.cpp  texture.cpp
src/core/scene/: unit.cpp
src/core/utils/: vector2.cpp  vector3.cpp
src/math/: vector2.cpp  vector3.cpp
src/resource/: metadata.cpp
src/test/c_abi/graphic/: window_test.c
test/: CMakeLists.txt
test/c_abi/graphic/: window_test.c
test/core/graphic/: window_test.cpp
test/core/scene/: test_unit.cpp  test_unit_iterator.cpp
test/core/utils/: test_vector2.cpp  test_vector3.cpp
